--- a/styles/variables.less
+++ b/styles/variables.less
@@ -1,5 +1,15 @@
+// ----------
+// Dimensions
+// ----------
+
+@margin-extra-large: 40px;
+@margin-large: 25px;
+@margin-base: 15px;
+@margin-small: 5px;
+@margin-extra-small: 2px;
+
 // ------
-// COLORS
+// Colors
 // ------
 
 @reactivex-pink:  #EC0C8E;
