Fixed missing CSS class for footer menus

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -148,21 +148,21 @@
           </div>
 
           <div class="col-sm-3">
-            <ul>
+            <ul class="footer-section">
               <li><h4>Languages</h4></li>
               {% include languages-section-ul.html %}
             </ul>
           </div>
 
           <div class="col-sm-3">
-            <ul>
+            <ul class="footer-section">
               <li><h4>Resources</h4></li>
               {% include resources-section-ul.html %}
             </ul>
           </div>
 
           <div class="col-sm-3">
-            <ul>
+            <ul class="footer-section">
               <li><h4>Community</h4></li>
               {% include community-section-ul.html %}
             </ul>
