Add correct links to repositories

--- a/_includes/languages-section-ul.html
+++ b/_includes/languages-section-ul.html
@@ -1,7 +1,6 @@
-<li><a href="#">RxJava</a></li>
-<li><a href="#">RxJS</a></li>
-<li><a href="#">Rx.NET</a></li>
-<li><a href="#">RxPY</a></li>
-<li><a href="#">RxScala</a></li>
-<li><a href="#">RxClojure</a></li>
-<li><a href="#">Others</a></li>
+<li><a href="https://github.com/ReactiveX/RxJava">RxJava<span class="external-link"></span></a></li>
+<li><a href="https://github.com/Reactive-Extensions/RxJS">RxJS<span class="external-link"></span></a></li>
+<li><a href="https://github.com/Reactive-Extensions/Rx.NET">Rx.NET<span class="external-link"></span></a></li>
+<li><a href="https://github.com/ReactiveX/RxScala">RxScala<span class="external-link"></span></a></li>
+<li><a href="https://github.com/ReactiveX/RxClojure">RxClojure<span class="external-link"></span></a></li>
+<li><a href="{{ site.url }}/languages.html">Others</a></li>
