--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -172,7 +172,7 @@
         <div class="row">
           <div class="col-sm-12 disclaimer">
             <img class="footer-logo" src="{{ site.url }}/assets/Rx_Logo_BW_S.png" />
-            <a href="{{ site.url }}">ReactiveX<span class="link-indicator"></span></a> is an open source project
+            <a href="{{ site.url }}">ReactiveX<span class="external-link"></span></a> is an open source project
             with contributors from Netflix and others. The content of this
             page is licensed under _____, and code samples are licensed
             under _____.
