--- a/styles/reactivex.less
+++ b/styles/reactivex.less
@@ -71,7 +71,7 @@ body {
   margin-top: @margin-large;
 }
 
-.link-indicator {
+.external-link {
   .glyphicon;
   .glyphicon-new-window;
   vertical-align: super;
