--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -172,10 +172,9 @@
         <div class="row">
           <div class="col-sm-12 disclaimer">
             <img class="footer-logo" src="{{ site.url }}/assets/Rx_Logo_BW_S.png" />
-            <a href="{{ site.url }}">ReactiveX<span class="external-link"></span></a> is an open source project
-            with contributors from Netflix and others. The content of this
-            page is licensed under _____, and code samples are licensed
-            under _____.
+            <a href="{{ site.url }}">ReactiveX<span class="external-link"></span></a> is a collection of open source projects. The content of this
+            page is licensed under Creative Commons Attribution 3.0 License, and
+            code samples are licensed under the BSD License.
           </div>
         </div>
       </div>
