--- a/_includes/community-section-ul.html
+++ b/_includes/community-section-ul.html
@@ -1,3 +1,3 @@
 <li><a href="https://github.com/ReactiveX">GitHub<span class="external-link"></span></a></li>
-<li><a href="#">Google Groups<span class="external-link"></span></a></li>
 <li><a href="https://twitter.com/ReactiveX">Twitter<span class="external-link"></span></a></li>
+<li><a href="{{ site.url }}/community.html">Others</a></li>
