Added content to resources/tutorials page

--- a/_includes/resources-section-ul.html
+++ b/_includes/resources-section-ul.html
@@ -1,4 +1,4 @@
-<li><a href="#">Tutorials</a></li>
+<li><a href="{{ site.url }}/tutorials.html">Tutorials</a></li>
 <li><a href="{{ site.url }}/releases.html">Releases and Binaries</a></li>
 <li><a href="#">Code samples</a></li>
 <li><a href="#">Presentations</a></li>
