--- a/styles/variables.less
+++ b/styles/variables.less
@@ -46,6 +46,12 @@
 
 @font-size-base: 16px;
 @readable-line-width: 50rem;
+@font-size-h1:            floor((@font-size-base * 2.5));
+@font-size-h2:            floor((@font-size-base * 1.8));
+@font-size-h3:            ceil((@font-size-base * 1.5));
+@font-size-h4:            ceil((@font-size-base * 1.25));
+@font-size-h5:            @font-size-base;
+@font-size-h6:            ceil((@font-size-base * 0.85));
 
 @reactivex-font-special: "Signika", Helvetica, sans-serif;
 @reactivex-font-basic: "Source Sans Pro", Helvetica, sans-serif;
