--- a/styles/reactivex.less
+++ b/styles/reactivex.less
@@ -44,6 +44,11 @@ body {
         background: @gray-dark;
       }
     }
+    li > em {
+      display: block;
+      padding: 3px 20px;
+      color: @gray-light;
+    }
   }
 }
 
