--- a/styles/reactivex.less
+++ b/styles/reactivex.less
@@ -9,6 +9,7 @@
 // ----------------------
 
 @import "variables.less";
+@import "frontpage.less";
 
 html {
   font-size: @font-size-base; // defines rem
@@ -49,25 +50,6 @@ body {
       padding: 3px 20px;
       color: @gray-light;
     }
-  }
-}
-
-.jumbotron {
-  background: url("/assets/diagmonds.png");
-  min-height: 400px;
-  color: @gray-lighter;
-  h1.title {
-    font-family: @reactivex-font-special;
-    img {
-      width: 80px;
-      height: 80px;
-      margin-top: -10px;
-      margin-right: @margin-base;
-    }
-    margin-bottom: @margin-extra-large;
-  }
-  h2.value-proposition {
-    line-height: 1.3em;
   }
 }
 
