Minor improvements to the Observable section on the frontpage

--- a/_layouts/frontpage.html
+++ b/_layouts/frontpage.html
@@ -79,7 +79,7 @@ layout: default
       COMBINE: Compose and transform streams with query-like operators
     </div>
     <div class="col-md-3">
-      LISTEN: Subscribe to any Observable stream to perform side effects
+      LISTEN: Subscribe to any observable stream to perform side effects
     </div>
   </div>
 
