Icons wand, join, ear, for headers CREATE, COMBINE, LISTEN

--- a/_layouts/frontpage.html
+++ b/_layouts/frontpage.html
@@ -73,13 +73,22 @@ layout: default
 
   <div class="row">
     <div class="col-md-3 col-md-offset-1">
-      CREATE: Easily create event streams or data streams
+      <div class="frontpage-feature ps-top-to-bottom">
+        <h2><img src="{{ site.url }}/assets/wand.svg" />CREATE</h2>
+        <p>Easily create event streams or data streams.</p>
+      </div>
     </div>
     <div class="col-md-4">
-      COMBINE: Compose and transform streams with query-like operators
+      <div class="frontpage-feature ps-top-to-bottom">
+        <h2><img src="{{ site.url }}/assets/join.svg" />COMBINE</h2>
+        <p>Compose and transform streams with query-like operators.</p>
+      </div>
     </div>
     <div class="col-md-3">
-      LISTEN: Subscribe to any observable stream to perform side effects
+      <div class="frontpage-feature ps-top-to-bottom">
+        <h2><img src="{{ site.url }}/assets/ear.svg" />LISTEN</h2>
+        <p>Subscribe to any observable stream to perform side effects.</p>
+      </div>
     </div>
   </div>
 
