New background image for jumbotron on frontpage

--- a/styles/frontpage.less
+++ b/styles/frontpage.less
@@ -1,7 +1,9 @@
 
 .jumbotron {
-  background-image: url("/assets/diagmonds.png");
+  background-image: url("/assets/reactivex_bg.jpg");
   background-attachment: fixed;
+  background-size: cover;
+  background-position: top center;
   perspective: 1rem;
   min-height: ~"calc(100vh - 50px)"; // 50px is @navbar-height
   color: @gray-lighter;
