Refactor styles from frontpage to frontpage-diagram.less

--- a/styles/reactivex.less
+++ b/styles/reactivex.less
@@ -10,6 +10,7 @@
 
 @import "variables.less";
 @import "frontpage.less";
+@import "frontpage-diagram.less";
 
 html {
   font-size: @font-size-base; // defines rem
