Drafted the Ubiquitous section

--- a/_layouts/frontpage.html
+++ b/_layouts/frontpage.html
@@ -16,7 +16,7 @@ layout: default
 </div>
 
 <div class="container frontpage-content">
-  <div class="row">
+  <div class="row frontpage-section">
     <div class="col-md-10 col-md-offset-1">
       <h1>The Observer pattern done right</h1>
       <h4>ReactiveX is a combination of the best ideas from<br /> the <span class="em-color1">Observer</span> pattern, the <span class="em-color2">Iterator</span> pattern, and <span class="em-color3">functional programming</span></h4>
@@ -92,7 +92,34 @@ layout: default
     </div>
   </div>
 
-    {{ content }}
+  <div class="row frontpage-section">
+    <div class="col-md-10 col-md-offset-1">
+      <h1>Ubiquitous</h1>
+      <h4>ReactiveX is everywhere, and it's meant for everything.</h4>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-3 col-md-offset-1">
+      <div class="frontpage-feature">
+        <h2>FRONTEND</h2>
+        <p>...</p>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="frontpage-feature">
+        <h2>CROSS-PLATFORM</h2>
+        <p>...</p>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div class="frontpage-feature">
+        <h2>BACKEND</h2>
+        <p>...</p>
+      </div>
+    </div>
+  </div>
+
+  {{ content }}
 </div>
 
 <script src="/js/frontpage.js"></script>
