Drafted the remaining sections on the frontpage

--- a/_layouts/frontpage.html
+++ b/_layouts/frontpage.html
@@ -119,6 +119,41 @@ layout: default
     </div>
   </div>
 
+  <div class="row frontpage-section">
+    <div class="col-md-10 col-md-offset-1">
+      <h1>Better code</h1>
+      <ul>
+        <li>Functional style</li>
+        <li>Less is better</li>
+        <li>Async error handling</li>
+<!-- Proper asynchronous error handling -->
+        <li>Concurrency abstracted</li>
+<!-- Abstract away low-level threading, synchronization, concurrency -->
+      </ul>
+    </div>
+  </div>
+
+  <div class="row frontpage-section">
+    <div class="col-md-6 col-md-offset-3">
+      <h1><em><span class="em-color2">Reactive Revolution</span></em></h1>
+      <h3>ReactiveX is more than a framework, it's an idea and a breakthrough in programming. It has inspired several other frameworks, and even programming languages.</h3>
+    </div>
+  </div>
+
+  <div class="row frontpage-section">
+    <div class="col-md-10 col-md-offset-1">
+      <h1>We use ReactiveX</h1>
+      <ul>
+        <li>Netflix</li>
+        <li>GitHub</li>
+        <li>Couchbase</li>
+        <li>Soundcloud</li>
+        <li>Futurice</li>
+        <li>Microsoft</li>
+      </ul>
+    </div>
+  </div>
+
   {{ content }}
 </div>
 
