--- a/_layouts/frontpage.html
+++ b/_layouts/frontpage.html
@@ -102,19 +102,19 @@ layout: default
     <div class="col-md-3 col-md-offset-1">
       <div class="frontpage-feature">
         <h2>FRONTEND</h2>
-        <p>...</p>
+        <p>Manipulate UI events and API responses, on the Web with RxJS, or on mobile with Rx.NET and RxJava</p>
       </div>
     </div>
     <div class="col-md-4">
       <div class="frontpage-feature">
         <h2>CROSS-PLATFORM</h2>
-        <p>...</p>
+        <p>Available for idiomatic Java, Scala, C#, Clojure, JavaScript, Python, Groovy, JRuby, and others</p>
       </div>
     </div>
     <div class="col-md-3">
       <div class="frontpage-feature">
         <h2>BACKEND</h2>
-        <p>...</p>
+        <p>Embrace ReactiveX's asynchronicity, enabling concurrency and implementation independence</p>
       </div>
     </div>
   </div>
@@ -135,7 +135,7 @@ layout: default
 
   <div class="row frontpage-section">
     <div class="col-md-6 col-md-offset-3">
-      <h1><em><span class="em-color2">Reactive Revolution</span></em></h1>
+      <h1><em>Reactive Revolution</em></h1>
       <h3>ReactiveX is more than a framework, it's an idea and a breakthrough in programming. It has inspired several other frameworks, and even programming languages.</h3>
     </div>
   </div>
