Drafted 'Better code' section'; added horizontal lines

--- a/_layouts/frontpage.html
+++ b/_layouts/frontpage.html
@@ -16,7 +16,7 @@ layout: default
 </div>
 
 <div class="container frontpage-content">
-  <div class="row frontpage-section">
+  <div class="row">
     <div class="col-md-10 col-md-offset-1">
       <h1>The Observer pattern done right</h1>
       <h4>ReactiveX is a combination of the best ideas from<br /> the <span class="em-color1">Observer</span> pattern, the <span class="em-color2">Iterator</span> pattern, and <span class="em-color3">functional programming</span></h4>
@@ -92,7 +92,9 @@ layout: default
     </div>
   </div>
 
-  <div class="row frontpage-section">
+  <div class="horizontal-line"></div>
+
+  <div class="row">
     <div class="col-md-10 col-md-offset-1">
       <h1>Ubiquitous</h1>
       <h4>ReactiveX is everywhere, and it's meant for everything.</h4>
@@ -101,46 +103,60 @@ layout: default
   <div class="row">
     <div class="col-md-3 col-md-offset-1">
       <div class="frontpage-feature">
-        <h2>FRONTEND</h2>
+        <h2 class="em-color1">FRONTEND</h2>
         <p>Manipulate UI events and API responses, on the Web with RxJS, or on mobile with Rx.NET and RxJava</p>
       </div>
     </div>
     <div class="col-md-4">
       <div class="frontpage-feature">
-        <h2>CROSS-PLATFORM</h2>
+        <h2 class="em-color2">CROSS-PLATFORM</h2>
         <p>Available for idiomatic Java, Scala, C#, Clojure, JavaScript, Python, Groovy, JRuby, and others</p>
       </div>
     </div>
     <div class="col-md-3">
       <div class="frontpage-feature">
-        <h2>BACKEND</h2>
+        <h2 class="em-color3">BACKEND</h2>
         <p>Embrace ReactiveX's asynchronicity, enabling concurrency and implementation independence</p>
       </div>
     </div>
   </div>
 
-  <div class="row frontpage-section">
-    <div class="col-md-10 col-md-offset-1">
+  <div class="horizontal-line"></div>
+
+  <div class="row">
+    <div class="col-md-8 col-md-offset-2">
       <h1>Better code</h1>
-      <ul>
-        <li>Functional style</li>
-        <li>Less is better</li>
-        <li>Async error handling</li>
-<!-- Proper asynchronous error handling -->
-        <li>Concurrency abstracted</li>
-<!-- Abstract away low-level threading, synchronization, concurrency -->
-      </ul>
+      <div class="frontpage-left-feature frontpage-lambda">
+        <h3>Functional</h3>
+        <p>Lorem ipsum blabla asdask jeckjecaoieoaec aec kajs dkajskj sdasde</p>
+      </div>
+      <div class="frontpage-left-feature frontpage-lambda">
+        <h3>Less is better</h3>
+        <p>Lorem ipsum blabla asdask jeckjecaoieoaec aec kajs dkajskj sdasde</p>
+      </div>
+      <div class="frontpage-left-feature frontpage-lambda">
+        <h3>Async error handling</h3>
+        <p>Proper asynchronous error handling, the try/catch, etc</p>
+      </div>
+      <div class="frontpage-left-feature frontpage-lambda">
+        <h3>Concurrency made easy</h3>
+        <p>Abstract away low-level threading, synchronization, concurrency</p>
+      </div>
     </div>
   </div>
 
-  <div class="row frontpage-section">
+  <div class="horizontal-line"></div>
+
+  <div class="row">
     <div class="col-md-6 col-md-offset-3">
       <h1><em>Reactive Revolution</em></h1>
       <h3>ReactiveX is more than a framework, it's an idea and a breakthrough in programming. It has inspired several other frameworks, and even programming languages.</h3>
     </div>
   </div>
 
-  <div class="row frontpage-section">
+  <div class="horizontal-line"></div>
+
+  <div class="row">
     <div class="col-md-10 col-md-offset-1">
       <h1>We use ReactiveX</h1>
       <ul>
